fixed overflow issue

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -3,6 +3,11 @@
   scroll-margin-top: 55px;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 /* hide anchors unless they're hovered to offset the weird margin/padding
    needed for anchored links to not hide the target behind the navigation bar */
 *:hover > .anchorjs-link {
